...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_list"
            isGone="@{(listMovie.size() == 0)}"
            setDataMovies="@{listMovie}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:contentDescription=""
...
