...

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/card_side_margin"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/card_side_margin"
                    android:layout_marginBottom="@dimen/card_bottom_margin"
...
